--- a/AndroidApp/HackAThon/wear/src/main/res/layout/round_activity_main.xml
+++ b/AndroidApp/HackAThon/wear/src/main/res/layout/round_activity_main.xml
@@ -7,10 +7,22 @@
     tools:deviceIds="wear_round">
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/speechTextView"
+        android:textAppearance="@style/TextAppearance.WearDiag"
+        android:layout_marginTop="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_round" />
+        android:layout_below="@+id/launchCommandButton"
+        android:layout_alignStart="@+id/launchCommandButton" />
+
+    <Button
+        android:text="Nothing Here"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/launchCommandButton"
+        android:fontFamily="monospace"
+        android:textSize="8sp"
+        android:layout_marginTop="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
